--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,44 @@
+@import url("https://fonts.googleapis.com/css?family=Merriweather");
+
+:root {
+	--primary-color3: #009999;
+	--primary-color4: #008080;
+}
 
 #note {
 	white-space: pre-line;
 	height: 250px;
 }
 
-#logo-text {
-	color:green;
-	margin-bottom: 2em;
-}
-
 .fade-out {
-	visibility: hidden;
+	/* visibility: hidden;
   	opacity: 0;
-  	transition: visibility 0s 2s, opacity 2s linear;
+  	transition: visibility 0s 2s, opacity 2s linear; */
 }
 
-.empty-msg {
-	/*min-height: 72px;*/
+#logo-text {
+	font-family: 'Merriweather', sans-serif;
+	font-weight: bold;
+	color: var(--primary-color3); 
+	margin-bottom: 1em;
+}
+
+.login {
+	border-radius: 15px;
+	margin-top: 100px;
+	border: 1px solid #d9d9d9;
+}
+
+.btn-primary2 {
+	background-color: var(--primary-color3);
+	color: #ffffff;
+}
+
+.btn-primary2:hover {
+	background-color: var(--primary-color4);
+	color: #ffffff;
+}
+
+.btn-primary2:focus {
+	color: #ffffff;
 }
