--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,11 @@
   --primary-color3: #145b9b;
   --primary-color4: #125087;
 
-  --secondary-color3: #f0502a;
+  --secondary-color3: #FF4800;
 
   --gray1: #f2f2f2;
   --gray2: #e6e6e6;
+  --gray3: #d9d9d9;
   --gray5: #333;
 }
 
@@ -48,7 +49,7 @@
 .login {
   border-radius: 15px;
   margin-top: 100px;
-  border: 1px solid var(--gray2);
+  border: 1px solid var(--gray3);
 }
 #sidebar {
   /* border: 1px solid var(--gray2);
