changed some css

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Merriweather");
 
 :root {
-  --primary-color1: #176bb5;
+  --primary-color1: #1d86e2;
   --primary-color3: #145b9b;
   --primary-color4: #125087;
 
