--- a/src/index.css
+++ b/src/index.css
@@ -81,3 +81,8 @@
 .page-header {
   border-bottom: 1px solid var(--primary-color1);
 }
+.form-control:focus{
+  border-color: #cccccc;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
