--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --primary-color3: #145b9b;
   --primary-color4: #125087;
 
-  --secondary-color3: #FF4800;
+  --secondary-color3: #ff4800;
 
   --gray1: #f2f2f2;
   --gray2: #e6e6e6;
@@ -79,10 +79,11 @@
   margin-bottom: 20px;
 }
 .page-header {
-  border-bottom: 1px solid var(--primary-color1);
+  border-bottom: 1px solid var(--gray2);
+  font-weight: bold;
 }
-.form-control:focus{
-  border-color: #cccccc;
+.form-control:focus {
+  border-color: var(--primary-color1);
   -webkit-box-shadow: none;
   box-shadow: none;
 }
