--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Merriweather");
 
 :root {
-  --primary-color1: #1d86e2;
+  --primary-color1: #e8f3fc;
+  --primary-color2: #1d86e2;
   --primary-color3: #145b9b;
   --primary-color4: #125087;
+  --primary-color5: #0f4371;
 
   --secondary-color3: #ff4800;
 
@@ -53,7 +55,7 @@
   border: 1px solid var(--gray3);
 }
 #sidebar {
-  border-right: 1px solid var(--gray2);
+  /* border-right: 1px solid var(--primary-color3); */
   background-color: var(--gray1);
   height: 100%;
   overflow-y: auto;
@@ -87,9 +89,10 @@
 .page-header {
   border-bottom: 1px solid var(--gray2);
   font-weight: 600;
+  /* color: var(--primary-color3); */
 }
 .form-control:focus {
-  border-color: var(--primary-color1);
+  border-color: var(--primary-color2);
   -webkit-box-shadow: none;
   box-shadow: none;
 }
