changed css for btn-default

--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,9 @@
 .btn-primary2:focus {
   color: #ffffff;
 }
+.btn-default {
+  margin-left: 5px;
+}
 .logo-text {
   font-size: 25px;
   font-family: "Merriweather", sans-serif;
