--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Merriweather");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:extrabold");
 
 :root {
   --primary-color1: #e8f3fc;
@@ -42,9 +42,9 @@
   margin-left: 10px;
 }
 .logo-text {
-  font-size: 25px;
-  font-family: "Merriweather", sans-serif;
-  font-weight: bold;
+  font-size: 33px;
+  font-family: "Open Sans", sans-serif;
+  /* font-weight: bold; */
   color: var(--primary-color3);
   margin-bottom: 50px;
   text-align: center;
