--- a/src/index.css
+++ b/src/index.css
@@ -27,10 +27,10 @@
   transition: visibility 0s 2s, opacity 2s linear;
 }
 .alert {
-  padding: 5px;
+  padding: 6px;
 }
 .empty-msg {
-  height: 52px;
+  /*height: 52px;*/
 }
 
 .btn-primary2 {
@@ -48,7 +48,7 @@
   margin-left: 8px;
 }
 .logo-text {
-  font-size: 30px;
+  font-size: 24px;
   font-family: "Open Sans", sans-serif;
   /* font-weight: bold; */
   color: var(--primary-color3);
