--- a/src/index.css
+++ b/src/index.css
@@ -26,11 +26,7 @@
   opacity: 0;
   transition: visibility 0s 2s, opacity 2s linear;
 }
-.alert {
-  padding: 2px;
-  margin-bottom: 15px;
-  border: 0;
-}
+
 .empty-msg {
   /*height: 52px;*/
 }
@@ -47,14 +43,14 @@
   color: #ffffff;
 }
 .btn-adjacent {
-  margin-left: 8px;
+  margin-left: 10px;
 }
 .logo-text {
-  font-size: 24px;
+  font-size: 30px;
   font-family: "Open Sans", sans-serif;
   /* font-weight: bold; */
   color: var(--primary-color3);
-  margin-bottom: 40px;
+  margin-bottom: 28px;
   text-align: center;
 }
 #logo-slash {
@@ -95,7 +91,7 @@
 }
 .logo-main {
   text-align: left;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
 .toolbar {
   margin-bottom: 20px;
@@ -121,6 +117,22 @@
 }
 @media (max-width: 768px) {
   .login-container {
-    margin-top: 0;
+    margin-top: 100px;
+  }
+}
+
+.alert-fixed {
+  position: fixed;
+  top: 0px;
+  left: 40%;
+  width: 20%;
+  z-index: 9999;
+  text-align: center;
+  padding: 5px;
+}
+@media (max-width: 768px) {
+  .alert-fixed {
+    left: 20%;
+    width: 60%;
   }
 }
