--- a/src/index.css
+++ b/src/index.css
@@ -130,6 +130,7 @@
   text-align: center;
   padding: 5px;
   font-weight: bold;
+  font-size: 13px;
 }
 @media (max-width: 768px) {
   .alert-fixed {
