--- a/src/index.css
+++ b/src/index.css
@@ -35,16 +35,20 @@
   background-color: var(--primary-color3);
   color: #ffffff;
 }
+
 .btn-primary2:hover {
   background-color: var(--primary-color4);
   color: #ffffff;
 }
+
 .btn-primary2:focus {
   color: #ffffff;
 }
+
 .btn-adjacent {
-  margin-left: 10px;
+  margin-left: 21px;
 }
+
 .logo-text {
   font-size: 24px;
   font-family: "Open Sans", sans-serif;
@@ -53,14 +57,17 @@
   margin-bottom: 34px;
   text-align: center;
 }
+
 #logo-slash {
   color: var(--secondary-color3);
 }
+
 .login {
   border-radius: 15px;
   margin-top: 200px;
   border: 1px solid var(--gray3);
 }
+
 #sidebar {
   /* border-right: 1px solid var(--primary-color3); */
   background-color: var(--gray1);
@@ -78,24 +85,32 @@
     background-color: #ffffff;
   }
 }
+
 #main-content {
   margin-bottom: 30px;
+  margin-top: 40px;
 }
+
 #todo-list {
   list-style-type: none;
   padding-left: 0px;
 }
+
 #todo-list a {
   color: var(--gray5);
   font-size: 14px;
 }
+
 .logo-main {
   text-align: left;
   margin-bottom: 30px;
 }
+
 .toolbar {
   margin-bottom: 20px;
+  margin-top: 40px;
 }
+
 .page-header {
   border-bottom: 1px solid var(--gray2);
   font-weight: 600;
@@ -103,15 +118,18 @@
   margin: 40px 0 15px;
   /* color: var(--primary-color3); */
 }
+
 .form-control:focus {
   border-color: var(--primary-color2);
   -webkit-box-shadow: none;
   box-shadow: none;
 }
+
 .col-centered {
   float: none;
   margin: 0 auto;
 }
+
 .login-container {
   margin-top: 100px;
 }
@@ -121,19 +139,37 @@
   }
 }
 
-.alert-fixed {
+.short-alert-fixed {
+  position: fixed;
+  top: 0px;
+  left: 45%;
+  width: 10%;
+  z-index: 9999;
+  text-align: center;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 14px;
+}
+@media (max-width: 768px) {
+  .short-alert-fixed {
+    left: 35%;
+    width: 30%;
+  }
+}
+
+.long-alert-fixed {
   position: fixed;
   top: 0px;
   left: 40%;
   width: 20%;
   z-index: 9999;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
   font-weight: bold;
   font-size: 14px;
 }
 @media (max-width: 768px) {
-  .alert-fixed {
+  .long-alert-fixed {
     left: 20%;
     width: 60%;
   }
