remove sidebar background
some minor ui changes

--- a/src/index.css
+++ b/src/index.css
@@ -70,7 +70,7 @@
 
 #sidebar {
   /* border-right: 1px solid var(--primary-color3); */
-  background-color: var(--gray1);
+  /* background-color: var(--gray1); */
   height: 100%;
   overflow-y: auto;
   position: fixed;
@@ -177,4 +177,8 @@
 
 .note-icon {
   margin-right: 4px;
+}
+
+#title {
+  font-size: 16px;
 }
