--- a/src/index.css
+++ b/src/index.css
@@ -49,12 +49,13 @@
   margin-left: 21px;
 }
 
-.logo-text {
+.logo {
   font-size: 24px;
   font-family: "Open Sans", sans-serif;
   /* font-weight: bold; */
   color: var(--primary-color3);
-  margin-bottom: 34px;
+  margin-bottom: 25px;
+  margin-top: 12px;
   text-align: center;
 }
 
@@ -103,12 +104,13 @@
 
 .logo-main {
   text-align: left;
-  margin-bottom: 30px;
+  margin-bottom: 21px;
+  margin-top: 34px;
+  font-size: 22px;
 }
 
 .toolbar {
   margin-bottom: 20px;
-  margin-top: 40px;
 }
 
 .page-header {
