--- a/src/index.css
+++ b/src/index.css
@@ -54,8 +54,7 @@
   font-family: "Open Sans", sans-serif;
   /* font-weight: bold; */
   color: var(--primary-color3);
-  margin-bottom: 25px;
-  margin-top: 12px;
+  margin-bottom: 35px;
   text-align: center;
 }
 
@@ -67,6 +66,8 @@
   border-radius: 15px;
   margin-top: 200px;
   border: 1px solid var(--gray3);
+  padding-top: 30px;
+  padding-bottom: 25px;
 }
 
 #sidebar {
