--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:extrabold");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:extrabold|Source+Sans+Pro:black");
 
 :root {
   --primary-color1: #e8f3fc;
@@ -46,8 +46,8 @@
 }
 
 .logo {
-  font-size: 31px;
-  font-family: "Open Sans", sans-serif;
+  font-size: 35px;
+  font-family: "Source Sans Pro", sans-serif;
   /* font-weight: bold; */
   color: var(--primary-color3);
   margin-bottom: 30px;
@@ -103,7 +103,7 @@
   text-align: left;
   margin-bottom: 21px;
   margin-top: 33px;
-  font-size: 26px;
+  font-size: 28px;
 }
 
 .toolbar {
