--- a/src/index.css
+++ b/src/index.css
@@ -44,8 +44,8 @@
 }
 
 .logo {
-  font-size: 32px;
-  font-family: "Source Sans Pro", sans-serif;
+  font-size: 30px;
+  font-family: "Open Sans", sans-serif;
   /* font-weight: bold; */
   color: var(--primary-color3);
   margin-bottom: 41px;
@@ -93,15 +93,15 @@
 }
 
 #todo-list a {
-  color: var(--gray5);
-  font-size: 14px;
+  /* color: var(--gray5); */
+  color: inherit;
 }
 
 .logo-main {
   text-align: left;
   margin-bottom: 21px;
   margin-top: 33px;
-  font-size: 28px;
+  font-size: 26px;
 }
 
 .toolbar {
@@ -173,9 +173,13 @@
 }
 
 .note-icon {
-  margin-right: 4px;
+  margin-right: 5px;
 }
 
 #title {
-  font-size: 19px;
+  font-size: 1.4em;
+}
+
+body {
+  font-family: Lato;
 }
