--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,6 @@
 
 .logo {
   font-size: 30px;
-  font-family: "Open Sans", sans-serif;
   font-weight: 800;
   color: var(--primary-color3);
   margin-bottom: 41px;
@@ -181,5 +180,5 @@
 }
 
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", sans-serif;
 }
