--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@
 }
 
 .logo {
-  font-size: 30px;
+  font-size: 35px;
   font-weight: 900;
   color: var(--primary-color3);
   margin-bottom: 34px;
@@ -108,7 +108,8 @@
 }
 
 .form-control:focus {
-  border-color: var(--primary-color2);
+  border-color: var(--primary-color3);
+  border-width: 2px;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
